<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/fondo_inicio">

    <TextView
        android:id="@+id/tvappname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20.0dip"
        android:text="@string/app_name"
        android:textColor="#FF0000"
        android:textSize="32sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvappname"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25.0dip"
        android:layout_marginStart="4.0dip"
        android:layout_marginEnd="25.0dip"
        android:layout_marginTop="4.0dip"
        android:orientation="vertical">

        <TextView
            android:id="@+id/vers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/version"
            android:textColor="#ffffffff"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="14.0dip"
            android:background="@mipmap/ic_launcher"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12.0dip"
            android:text="@string/derechos"
            android:textColor="#ffffffff"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="6.0dip"
            android:layout_marginTop="16.0dip"
            android:text="@string/desarrollado_por"
            android:textColor="#ffffffff"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="20.0dip"
            android:text="@string/autores"
            android:textColor="#ffffffff"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvattabeira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/attabeia"
        android:textAllCaps="false"
        android:textColor="#FF0000"
        android:textSize="24sp"
        android:textStyle="bold" />
</RelativeLayout>