<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#ffffffff"
    android:orientation="vertical"
    android:weightSum="9.0">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50.0dip"
        android:gravity="center|left"
        android:orientation="horizontal"
        android:paddingStart="12.0dip">

        <TextView
            android:id="@+id/titul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="6.0dip"
            android:text="@string/declaracion"
            android:textColor="#ff000000"
            android:textSize="16.0sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4.0dip"
            android:text="@string/declara"
            android:textColor="#ff828483"
            android:textSize="14.0sp"
            android:textStyle="bold" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0.70000005dip"
        android:layout_marginTop="50.0dip"
        android:background="#ffd8d8d8" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="4.0dip"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="6.0dip">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:orientation="horizontal"
            android:weightSum="6.0">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/txtNombrePDF"
                android:text="@string/infoAduana"
                android:visibility="visible" />

            <EditText
                android:id="@+id/txtNombrePDF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView9"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="text"
                android:text="Declaración aduana" />

        </RelativeLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0.70000005dip"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout3"
        android:layout_marginTop="6.0dip"
        android:background="#ffd8d8d8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60.0dip"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/frameLayout"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/guardar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/boton_aceptar"
            android:text="@string/guardar" />
    </LinearLayout>
</RelativeLayout>