<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#ffffffff"
    android:orientation="vertical"
    android:weightSum="9.0">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50.0dip"
        android:gravity="center|left"
        android:orientation="horizontal"
        android:paddingStart="12.0dip">

        <TextView
            android:id="@+id/titul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="6.0dip"
            android:text="@string/seleccione"
            android:textColor="#ff000000"
            android:textSize="16.0sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:paddingStart="4.0dip"
            android:text="@string/elpeso"
            android:textColor="#ff828483"
            android:textSize="14.0sp"
            android:textStyle="bold" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0.70000005dip"
        android:layout_marginTop="50.0dip"
        android:background="#ffd8d8d8" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="4.0dip"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="6.0dip">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15.0dip"
            android:orientation="horizontal"
            android:weightSum="6.0">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <NumberPicker
                    android:id="@+id/npEntero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal" />

                <TextView
                    android:id="@+id/comaID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4.0dip"
                    android:layout_marginRight="4.0dip"
                    android:text=", 0 "
                    android:textSize="46.0sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/kgID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="4.0dip"
                    android:layout_marginStart="6.0dip"
                    android:text="Kg"
                    android:textSize="46.0sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0.70000005dip"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout3"
        android:layout_marginTop="6.0dip"
        android:background="#ffd8d8d8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60.0dip"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/frameLayout"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/aceptar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/boton_aceptar"
            android:text="@string/aceptar" />
    </LinearLayout>
</RelativeLayout>
